# mem-bridge

./: README.md  pyproject.toml
mem_bridge/: __init__.py  cli.py  differ.py  formatters.py  models.py
mem_bridge/adapters/: __init__.py  chatgpt.py  claude.py  gemini.py
templates/: prompt.md.j2
tests/: test_adapters.py  test_differ.py  test_formatters.py  test_gemini_adapter.py  test_models.py
tests/fixtures/: chatgpt_export.json  claude_export.json
