[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem_bridge"
version = "0.1.0"
description = "Export, convert, and manage AI memory profiles across ChatGPT, Claude, and Gemini platforms."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "mem_bridge contributors" }
]
keywords = ["ai", "memory", "chatgpt", "claude", "gemini", "cli", "export", "convert"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
    "jinja2>=3.1.0",
    "deepdiff>=6.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
mem_bridge = "mem_bridge.cli:app"

[project.urls]
Homepage = "https://github.com/example/mem_bridge"
Repository = "https://github.com/example/mem_bridge"
Issues = "https://github.com/example/mem_bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["mem_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
